[package]
name = "lana-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
magic-crypt = "3.1.10"
tokio = { version = "1.21.1", features = ["full"] }
chrono = "0.4.22"
dotenvy = "0.15.3"
rlua = "0.19.4"